Added support for withers and moved to Java 15